# minimal_uefi

./: Cargo.toml  OVMF_CODE-pure-efi.fd  README.md  build.sh
src/: main.rs
